-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 4.0.0-beta1
-
Ubuntu 14.04 LTS 64 bit
Ubuntu 15.10 64 bit
WIndows 10
- Start Creator with enabled ClangCodeModel plugin but otherwise default settings.
- In a source file type:
#include <vec
- Press Ctrl+Space to trigger code completion.
The line will be completed halfway to:#include <vector
Additionally, a popup offers "vector".
- Press Enter.
The line will be completed to:#include <vector>
When there's only one possible completion it does not make sense to add all characters except for the last. Either add the whole line or do nothing until the user presses Enter.
In Creator 3.6 this worked correctly.
Found by Squish test tst_CSUP06.
For Gerrit Dashboard: QTCREATORBUG-15710 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
154188,2 | Squish: Expect more fails with clang code model | 4.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
194917,4 | Clang: fix completion for incomplete includes | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
199738,3 | Squish: Expect wrong popups to be fixed | 4.4 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |